--- a/WordCount/pom.xml
+++ b/WordCount/pom.xml
@@ -1,23 +1,60 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.sanderprojects</groupId>
-    <artifactId>WordCount</artifactId>
-    <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
-    
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.storm</groupId>
-            <artifactId>storm-core</artifactId>
-            <version>0.9.3</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
-    
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.microsoft.example</groupId>
+  <artifactId>WordCount</artifactId>
+  <packaging>jar</packaging>
+  <version>1.0-SNAPSHOT</version>
+  <name>WordCount</name>
+  <url>http://maven.apache.org</url>
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>3.8.1</version>
+      <scope>test</scope>
+    </dependency>
+
+	<dependency>
+  <groupId>org.apache.storm</groupId>
+  <artifactId>storm-core</artifactId>
+  <version>0.9.3</version>
+  <!-- keep storm out of the jar-with-dependencies -->
+  <scope>provided</scope>
+</dependency>
+  </dependencies>
+
+
+<build>
+  <plugins>
+	<plugin>
+  <groupId>org.codehaus.mojo</groupId>
+  <artifactId>exec-maven-plugin</artifactId>
+  <executions>
+    <execution>
+    <goals>
+      <goal>exec</goal>
+    </goals>
+    </execution>
+  </executions>
+  <configuration>
+    <executable>java</executable>
+    <includeProjectDependencies>true</includeProjectDependencies>
+    <includePluginDependencies>false</includePluginDependencies>
+    <classpathScope>compile</classpathScope>
+    <mainClass>${storm.topology}</mainClass>
+  </configuration>
+</plugin>
+
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <configuration>
+    <source>1.7</source>
+    <target>1.7</target>
+  </configuration>
+</plugin>
+  </plugins>
+</build>
 </project>
